--- a/baloti_djelectionguard/templates/index.html
+++ b/baloti_djelectionguard/templates/index.html
@@ -286,6 +286,53 @@
     </div>
 </section>
 
+<section class="app-contact" id="contact-us">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5">
+                <h6 class="app-subtitle">{% trans "CONTACT US" %}</h6>
+                <h2 class="app-title app-h2 text-outfit-regular">{% trans "Feel free to <br> contact us" %}</h2>
+            </div>
+            <div class="col-sm-7">
+                <form class="app-contact__form">
+                {% csrf_token %}
+                    <div class="row g-0">
+                        <div class="col">
+                            <input id="id_firstname" name="firstname" type="text" class="form-control" required>
+                            <label for="">{% trans "Firstname*" %}</label>
+                        </div>
+                        <div class="col">
+                            <input id="id_lastname" name="lastname" type="text" class="form-control" required>
+                            <label for="">{% trans "Lastname*" %}</label>
+                        </div>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col">
+                            <input id="id_email" name="email" type="text" class="form-control" required>
+                            <label for="">{% trans "Email*" %}</label>
+                        </div>
+                        <div class="col">
+                            <input id="id_subject" name="subject" type="text" class="form-control" required>
+                            <label for="">{% trans "Subject*" %}</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <input id="id_message" name="message" type="text" class="form-control" required>
+                        <label for="">{% trans "Message*" %}</label>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <button type="button" class="btn btn-outline btn-contact" id="infomailSubmit">{% trans "SEND" %}</button>
+                      </div>
+                    </div>
+                </form>
+            </div>
+      </div>
+  </div>
+</section>
+
 <!-- Then put toasts within -->
 
 {% if registration == True %}
