--- a/baloti_djelectionguard/templates/landing-en.html
+++ b/baloti_djelectionguard/templates/landing-en.html
@@ -287,7 +287,7 @@
                                     document.getElementById('id_subject').value = "";
                                     document.getElementById('id_message').value = "";
                                     $("#message_text").text("Mail sent successfully.");
-                                    $("#info_mailsent").removeClass("d-none");
+                                    $("#info_mailsent").addClass("d-none");
                                     $("#info_mailsent").removeClass("error");
                                     $(".app-toast__tick").removeClass("d-none");
                                     submitButton.disabled = false;
